Implement calling API for adding a new task feature

--- a/server/todo-list/src/main/resources/application.properties
+++ b/server/todo-list/src/main/resources/application.properties
@@ -18,4 +18,8 @@ quarkus.smallrye-jwt.enabled=true
 # JWT issuer for token verification (must match in JwtGenerator)
 smallrye.jwt.sign.key.location=META-INF/resources/privateKey.pem
 mp.jwt.verify.publickey.location=META-INF/resources/publicKey.pem
+
+# CORS
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
 mp.jwt.verify.issuer=todo-app
